--- a/motor/GUI/XYZWidget.ui
+++ b/motor/GUI/XYZWidget.ui
@@ -45,7 +45,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -306,6 +306,9 @@
        <property name="buttonSymbols">
         <enum>QAbstractSpinBox::UpDownArrows</enum>
        </property>
+       <property name="maximum">
+        <number>1000</number>
+       </property>
       </widget>
       <widget class="QSpinBox" name="StepMoveY">
        <property name="geometry">
@@ -316,6 +319,9 @@
          <height>31</height>
         </rect>
        </property>
+       <property name="maximum">
+        <number>1000</number>
+       </property>
       </widget>
       <widget class="QSpinBox" name="StepMoveZ">
        <property name="geometry">
@@ -325,6 +331,9 @@
          <width>71</width>
          <height>31</height>
         </rect>
+       </property>
+       <property name="maximum">
+        <number>1000</number>
        </property>
       </widget>
       <widget class="QLabel" name="label">
@@ -1711,7 +1720,7 @@
      <x>0</x>
      <y>0</y>
      <width>655</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
